tentative fixes for slider utility on mobile (testing under way)

--- a/malasakit-django/pcari/static/css/main.less
+++ b/malasakit-django/pcari/static/css/main.less
@@ -235,11 +235,11 @@ input[type=range] {
   }
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
-    width: 1rem;
-    height: 1rem;
+    width: 1.2rem;
+    height: 1.2rem;
     background: goldenrod;
     border-radius: 50%;
-    margin-top: -0.3rem;
+    margin-top: -0.4rem;
   }
 }
 
